Fix avatar distortion

--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -2,4 +2,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
